--- a/blog/stylesheets/blog-stylesheet.css
+++ b/blog/stylesheets/blog-stylesheet.css
@@ -1,3 +1,7 @@
+body {
+  font-family: Helvetica, arial, freesans, clean, sans-serif;
+  color: #333;
+}
 
 #post-title {
   /*border: 1px solid green;*/
