--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -23,7 +23,7 @@ body {
   display: block;
 }
 
-#header-logo {
+.header-logo-container {
   /*border: 1px solid #000;*/
   display: inline-block;
   font-size: 30px;
@@ -31,6 +31,11 @@ body {
   color: #212121;
   margin-left: 60px;
   margin-top: 20px;
+}
+
+.header-logo {
+  color: #212121;
+  text-decoration: none;
 }
 
 #header-links-container {
@@ -57,7 +62,6 @@ body {
   height: 70%;
   margin: 70px auto;
   font-size: 17px;
-  text-align: center;
   padding-top: 30px;
 }
 
