add new blog post on css design

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -29,6 +29,11 @@ a {
   float: left;
 }
 
+code {
+  padding: 10px;
+  background-color: #cccccc;
+}
+
 /* <---- post index CSS ----> */
 
 .post-index-container {
