--- a/stylesheets/gps1-2.css
+++ b/stylesheets/gps1-2.css
@@ -8,51 +8,58 @@
   /*background-color: yellow;*/
   text-align: right;
 }
+
+h1 {
+  font-size: 22px;
+}
+
 .title {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: bold;
   text-decoration: underline;
   margin-bottom: 40px;
 }
 
 .article-body {
-  margin: 10px;
+  margin: 10px 10px 30px 10px;
 }
 
 h2 {
-  font-size: 16px;
+  font-size: 25px;
   font-weight: normal;
 }
 
 p {
-  font-size: 12px;
-
+  font-size: 20px;
 }
 
 h3 {
+  font-size: 25px;
   font-weight: normal;
   text-decoration: underline;
 }
 
 h5 {
-    text-align: center;
+  font-size: 23px;
+  text-align: center;
 }
 
 .col-wrapper {
   /*background-color: blue;*/
   overflow: auto;
+  font-size: 20px;
 }
 
 .left-col {
   /*background-color: blue;*/
-  height: 150px;
+  height: 200px;
   width: 49%;
   float: right;
   border-left: 1px solid #cccccc;
 }
 .right-col {
   /*background-color: green;*/
-  height: 150px;
+  height: 200px;
   width: 49%;
   float: left;
 }
