--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,75 +1,119 @@
-
 body {
-  font-family: Helvetica,arial,sans-serif;
-  font-size: 16px;
-  line-height: 1.6em;
-  text-transform: normal;
-  text-decoration: none;
-  font-weight: normal;
-  font-style: normal;
-  background-color: #e2e2e2;
+  margin: 0;
+  padding: 0;
 }
 
-#header {
-  /*border: 1px solid blue;*/
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #ffffff;
-  width: 100%;
-  height: 60px;
-  border-bottom: 1px solid #aaaaaa;
-  margin-bottom: 20px;
-  display: block;
+header {
+  background: #ABDDDE;
+  height: 75px;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.header-logo-container {
-  /*border: 1px solid #000;*/
-  display: inline-block;
+.site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.site-content {
+  flex: 1;
+  background: #EEEFF0;
+  color: #303030;
+}
+
+footer {
+  background: #caccce;
+  height: 70px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.name-logo {
+  /*background: lightgreen;*/
+  flex: 2;
+  font-family: 'Montserrat', sans-serif;
   font-size: 30px;
   font-weight: bold;
-  color: #212121;
-  margin-left: 60px;
-  margin-top: 20px;
+  text-transform: uppercase;
+  padding-left: 40px;
 }
 
-.header-logo {
-  color: #212121;
+.name-logo a {
+  color: #C93312;
   text-decoration: none;
 }
 
-#header-links-container {
-  /*border: 1px solid red;*/
-  display: inline-block;
-  float: right;
-  height: 100%;
+.navigation {
+  /*background: tomato;*/
+  flex: 1;
+
+  display: flex;
+  flow-direction: row;
+  list-style-type: none;
 }
 
-.header-link {
-  margin: 30px;
-  /*border: 1px solid yellow;*/
-  font-size: 22px;
-  color: #3da1bf;
-  position: relative;
-  top: 20px;
+.navigation li {
+  padding-right: 3em;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.navigation a {
+  color: #303030;
+  text-decoration: none;
+  padding-bottom: 10px;
+}
+
+.navigation a:hover {
+  border-bottom: 2px solid #303030;
+}
+
+.footer-social-media-wrapper {
+  /*background: lightblue;*/
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon-box {
+  width: 25px;
+  height: 25px;
+  margin: 0 30px 0 30px;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
+}
+
+a.twitter {
+  /* Linked-In colors: #4099ff, #fff */
+  color: #fff;
+  background: #4099ff;
   text-decoration: none;
 }
 
-#body-content {
-  background-color: #e2e2e2;
-  /*border: 1px solid green;*/
-  width: 100%;
-  height: 70%;
-  margin: 70px auto;
-  font-size: 17px;
-  padding-top: 30px;
+a.linkedin {
+  /* Linked-In colors: #0077b5, #fff */
+  color: #caccce;
+  background: #0077b5;
+  text-decoration: none;
 }
 
-#footer {
-  top: -5px;
-  background-color: #e2e2e2;
-  border-top: 1px solid #aaaaaa;
-  /*border: 1px solid red;*/
-  width: 100%;
-  height: 60px;
+a.github {
+  /* GitHub colors: #000, #f5f5f5 */
+  color: #ccc;
+  background: #000;
+  text-decoration: none;
 }
+
