--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -1,68 +1,30 @@
-body {
-  /*border*/: 1px solid green;
-  font-family: Helvetica, arial, freesans, clean, sans-serif;
-  color: #333;
-  padding-left: 20px;
-  /*background: #eee;*/
+
+.blog-post-wrapper {
+  margin: 60px 200px 60px 100px;
+  font-family: 'Open Sans', san-serif;
 }
 
-a {
-  color: #3da1bf;
-}
-
-#post-title {
-  /*border*/: 1px solid green;
-}
-
-#subtitle {
-  /*border*/: 1px solid green;
-}
-
-#post-date {
-  /*border*/: 1px solid green;
-  color: #888;
-}
-
-#post-content {
-  /*border*/: 1px solid green;
-  width: 70%;
-  float: left;
-}
-
-code {
-  padding: 10px;
-  background-color: #cccccc;
-}
-
-/* <---- post index CSS ----> */
-
-.post-index-container {
-  margin-top: 30px;
-  margin-left: 50px;
-}
-
-.post-index-header {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.post-index-body {
+.post-title {
 
 }
 
-.post-index-link {
-  display: block;
-  color: #3da1bf;
-  margin: 10px 0 10px 0;
+.post-subtitle {
+
 }
 
-/* <---- Misc  ----> */
+.post-date {
 
-.bold-text {
-  font-weight: bold;
+}
+
+.post-content {
+
 }
 
 .hr {
   width: 100%;
   border-bottom: 1px solid #888;
+}
+
+a {
+  color: #046C9A;
 }
