--- a/stylesheets/gist.css
+++ b/stylesheets/gist.css
@@ -9,4 +9,10 @@
 
 .gist .line {
   font-size: 16px; /* set font size of code */
+                   /* needs to be same size as .line-number */
+}
+
+.gist .line-number {
+  font-size: 16px; /* set font size of line number */
+                   /* needs to be same size as .line */
 }
