--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -52,6 +52,10 @@ pre {
   font-size: 16px;
 }
 
+.bold-text {
+  font-weight: bold;
+}
+
 /* <!-- begin post index ------ > */
 
 .post-index-container {
